# Path-Tracer

./: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  README.md
Path-Tracer/Include/: Camera.hpp  Image.hpp  Intersection.hpp  Material.hpp  Matrix.hpp  Object.hpp  Ray.hpp  Renderer.hpp  Vector.hpp
Path-Tracer/Source/: Camera.cpp  Image.cpp  Object.cpp  Renderer.cpp
src/: Camera.hpp  Image.hpp  Intersection.hpp  Main.cpp  Material.hpp  Matrix.hpp  Object.hpp  ProgressBar.cpp  ProgressBar.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Vector.hpp
