CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(PATH_TRACER)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
FILE(GLOB SRC_FILES "Main.cpp" "Path-Tracer/Include/*.hpp" "Path-Tracer/Source/*.cpp")
FIND_PACKAGE(Threads)
ADD_COMPILE_OPTIONS(-mavx2)
ADD_EXECUTABLE(PATH_TRACER "${SRC_FILES}")
TARGET_LINK_LIBRARIES(PATH_TRACER ${CMAKE_THREAD_LIBS_INIT})