CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(PATH_TRACER)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
FILE(GLOB         SRC_FILES   "${CMAKE_SOURCE_DIR}/Main.cpp" "${CMAKE_SOURCE_DIR}/Path-Tracer/Include/*.hpp" "${CMAKE_SOURCE_DIR}/Path-Tracer/Source/*.cpp")
FILE(GLOB_RECURSE POLAR_FILES "${CMAKE_SOURCE_DIR}/Polar-Lib/Include/*.cpp")
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
ADD_COMPILE_OPTIONS(-mavx2)
ADD_EXECUTABLE(PATH_TRACER ${SRC_FILES} ${POLAR_FILES})
TARGET_LINK_LIBRARIES(PATH_TRACER ${CMAKE_THREAD_LIBS_INIT} ${X11_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(PATH_TRACER PUBLIC "${CMAKE_SOURCE_DIR}/Polar-Lib/Include/" ${X11_INCLUDE_DIR})